tests/integration/errors/unexpected-token.it
Undeclared token

- compilation error
=========
void main() {
    void;
}
=========
<stdin>:2: error: syntax error, unexpected TYPE_VOID
